[gd_scene load_steps=6 format=3 uid="uid://d376dmasanssw"]

[ext_resource type="Script" path="res://Scripts/Systems/game_master.gd" id="1_veqw6"]
[ext_resource type="Script" path="res://Scripts/Systems/character_generator_system.gd" id="2_y3cvi"]
[ext_resource type="Script" path="res://Scripts/Systems/character_index_system.gd" id="3_gb42y"]
[ext_resource type="Script" path="res://Scripts/Systems/npc_dialogue_system.gd" id="4_ctumm"]
[ext_resource type="Script" path="res://Scripts/Systems/character_sprite_bakery.gd" id="5_qim5m"]

[node name="Systems" type="Node"]
script = ExtResource("1_veqw6")

[node name="CharacterGeneratorSystem" type="Node" parent="."]
script = ExtResource("2_y3cvi")

[node name="CharacterIndexSystem" type="Node" parent="."]
script = ExtResource("3_gb42y")

[node name="NPCDialogueSystem" type="Node" parent="."]
script = ExtResource("4_ctumm")

[node name="CharacterSpriteBakery" type="Node" parent="."]
script = ExtResource("5_qim5m")

[node name="SubViewport" type="SubViewport" parent="CharacterSpriteBakery"]
disable_3d = true
transparent_bg = true
size = Vector2i(256, 256)

[node name="TextureRect" type="TextureRect" parent="CharacterSpriteBakery/SubViewport"]
custom_minimum_size = Vector2(256, 256)
expand_mode = 1
